# velocity

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: benchmark_suite.cpp
docs/: API_REFERENCE.md  BENCHMARK_RESULTS.md  README.md
examples/: example.cpp
include/velocity/: common.h  mat4.h  vec2.h  vec3.h  vec4.h  velocity.h
src/: mat4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
tests/: test_main.cpp
